--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.5.0
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^6.0.0
+  dart_openai: ^5.1.0
+  image_gallery_saver_plus: ^4.0.1 # Use a versão mais recente
 
 dev_dependencies:
   flutter_test:
