--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   dart_openai: ^6.1.0
   path_provider: ^2.1.3
+  file_selector: ^1.0.0
   image_gallery_saver_plus: ^4.0.1 # Use a versão mais recente
 
 dev_dependencies:
