--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   path_provider: ^2.1.3
   file_selector: ^1.0.0
   image_gallery_saver_plus: ^4.0.1 # Use a versão mais recente
+  shared_preferences: ^2.3.2
+  provider: ^6.1.5+1
+
 
 dev_dependencies:
   flutter_test:
