--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 */flutter/generated_plugins.cmake
 **/GeneratedPluginRegistrant.swift
 
+/linux/flutter/generated_plugin_registrant.cc
+/linux/flutter/generated_plugins.cmake
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/windows/flutter/generated_plugin_registrant.cc
+/windows/flutter/generated_plugins.cmake
+
 # Dependencies lock file (for Flutter apps)
 pubspec.lock
 
